Adding changes from Thomas Blanchard - Added options --hosts - Fixed codingstyle

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 MAINTAINER:
-Douglas Schilling Landgraf <dougsland@redhat.com>
+Douglas Schilling Landgraf <dougsland@gmail.com>
 
 CONTRIBUTORS:
 Alberto Silva <asilva@redhat.com>
+Thomas Blanchard <tblanchard@valueclick.com>
